# SI-CESGA-PR-01616-Clever-Samples-KAFKA

./: .bandit  .copier-answers.python-project.yml  .gitattributes  .gitignore  .isort.cfg  CHANGELOG.md  LICENSE  Makefile  README.md  pylintrc  pyproject.toml
.github/workflows/: bandit_vulnerabilities.yml  build_push_develop.yml  build_push_tagged_main.yml  comment_pr.yml  linter_format_and_test.yml  releases.yml  sbom_on_pr.yml  sbom_on_push.yml  sbom_on_release.yml
scripts/: demoScript.py
src/: __init__.py  __main__.py  app.py  logger.py  settings.py  utils.py
src/config/: __init__.py  config.yml  loader.py  models.py
src/controller/: number.py
src/exceptions/: __init__.py  custom.py
src/file_toucher/: file_toucher.py
src/models/: base.py  entity_request.py  number.py  sample.py  variable_request.py
src/services/: __init__.py  clever_service.py  entities_service.py  processor.py  runner.py  samples_service.py
src/streams/: __init__.py  base.py  kafka.py  noop.py  stdin.py
src/utils/: entity_resolver.py  grouping.py  hierarchy.py  normalize.py
tests/: __init__.py
tools/: docker-compose.yml
tools/producer/: datos.csv  producer_csv_to_json.py
