[tool.poetry]
name = ""
version = "1.0.0"
description = "Service to import samples data into clever via streaming"
authors = ["Marco Álvarez <mafigueiro@gradiant.org>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
loguru = "^0.6.0"
python = "^3.11.7"

[tool.black]
line-length = 80

[project]
name = "si-tecnove-pr-01577-data-api"
version = "0.1.0"
description = "Service for managing data in the platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.3",
    "cosmic-ray==8.3.7",
    "cryptography==44.0.1",
    "fastapi==0.115.12",
    "httpx==0.27.2",
    "loguru==0.7.2",
    "python-multipart>=0.0.20",
    "psycopg2-binary==2.9.9",
    "pydantic==2.11.3",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "sqlalchemy==2.0.40",
    "uvicorn==0.29.0",
    "wait4it==0.2.1",
]

[dependency-groups]
dev = [
    "anyio==4.6.0",
    "pytest==8.4.1",
    "pytest-cov==5.0.0",
    "requests==2.32.4",
    "bandit>=1.7.10",
    "black>=24.3.0",
    "flake8>=7.1.2",
    "mypy>=1.16.0",
    "pip-licenses>=5.0.0",
    "ruff>=0.11.12",
]

[tool.ruff]
line-length = 80
lint.select = ["E9", "F63", "F7", "F82", "F403"]
exclude = ["*env*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
